--- a/src/style/theme.less
+++ b/src/style/theme.less
@@ -1,8 +1,9 @@
-//
+// 基色
+@basic-color:red;
+
+// VUX的自定义样式
 @tabbar-text-active-color: red;
-
-@icon-success-color:red
-
+@icon-success-color:red;
 @header-background-color: #DC0B24;
 @header-title-color: #fff;
 @header-text-color: #fff;
