--- a/src/style/theme.less
+++ b/src/style/theme.less
@@ -1,10 +1,28 @@
+
 // 基色
-@basic-color:red;
+@basic-color:#30a8d5;
+// 基本背景色
+@basic-bg:#eee;
+// 底部菜单背景色
+@menu-bg:#ddd;
+// 底部菜单字体三色
+@menu-color:#666;
+
+
+
+
+
 
 // VUX的自定义样式
-@tabbar-text-active-color: red;
+@tabbar-text-active-color: @basic-color;
+
 @icon-success-color:red;
+
 @header-background-color: #DC0B24;
+@header-background-color: @basic-color;
 @header-title-color: #fff;
 @header-text-color: #fff;
 @header-arrow-color: #fff;
+
+@cell-default-arrow-color:@menu-color;
+@cell-default-arrow-border-width:1px;
